k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rent-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: rent_backend
